package dev.fabled.alarm.utils

object TestTags {

    const val ALARM_NAME_TEXT = "alarm_name_text"

    const val ALARM_NAME_DIALOG_OPEN_BUTTON = "alarm_name_dialog_open_button"
    const val ALARM_NAME_DIALOG = "alarm_name_dialog"
    const val ALARM_NAME_INPUT = "alarm_name_input"
    const val ALARM_NAME_DIALOG_CLOSE_BUTTON = "alarm_name_dialog_close_button"

    const val SAVE_ALARM_BUTTON = "save_alarm_button"

    const val DAY_SELECTOR = "day_selector"

}